# wlanpi-rxg-agent

./: .gitignore  .isort.cfg  AGENTS.md  CLAUDE.md  Makefile  Pipfile  README.md  ROBOT_LISTENER_GUIDE.md  ROBOT_SUITE_DESIGN.md  build_baresip.sh  notes.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.old.py  setup.py  test_logging.py  testing.txt
.github/workflows/: build-and-archive-debian-package.yml  deploy-to-packagecloud.yml
debian/: changelog  control  copyright  debhelper-build-stamp  postinst  postrm  rules  wlanpi-rxg-agent.1  wlanpi-rxg-agent.1.md  wlanpi-rxg-agent.dirs  wlanpi-rxg-agent.install  wlanpi-rxg-agent.lintian-overrides  wlanpi-rxg-agent.manpages  wlanpi-rxg-agent.service  wlanpi-rxg-agent.substvars
docker/builder/: Dockerfile
docker/tools/: Dockerfile  build.sh  requirements.txt
install/etc/wlanpi-rxg-agent/: config.toml
scripts/: check-imports.sh  clean_pycache.sh  deploy_to_ap.sh  format.sh  generate_requirements.sh  lint.sh  manpage.sh  release_prep.sh  run_on_ap.sh  setup_dev.sh  sync-remote.sh  sync_to_ap.sh  test-integration.sh  test-unit.sh  test.sh
wlanpi_rxg_agent/: RxgMqttClient.py  __init__.py  __main__.py  __version__.py  api_client.py  bridge_control.py  busses.py  certificate_tool.py  constants.py  core_client.py  kismet_capture.py  kismet_control.py  rxg_agent.py  rxg_agent_old.py  rxg_mqtt_client.py  sandbox.py  structures.py  the_daemon.py  util_decorators.py  utils.py
wlanpi_rxg_agent/lib/: configuration-manager.py  custom_aiomqtt.py  domain.py  event_bus.py  logging_utils.py
wlanpi_rxg_agent/lib/agent_actions/: actions.py  domain.py
wlanpi_rxg_agent/lib/configuration/: agent_config_file.py  bootloader_config_file.py  bridge_config_file.py  config_file.py  schemas.py
wlanpi_rxg_agent/lib/event_bus/: __init__.py  _commandbus.py  _messagebus.py  api.py  event_bus.py
wlanpi_rxg_agent/lib/event_bus/default/: commandbus.py  messagebus.py
wlanpi_rxg_agent/lib/event_bus/middleware/: logger.py
wlanpi_rxg_agent/lib/network_control/: __init__.py  dhcp_client.py  dhcp_lease_parser.py  domain.py  interface_routing.py  models.py  ndb_routing_manager.py  netlink_monitor.py  network_control_manager.py  routing_manager.py
wlanpi_rxg_agent/lib/robot_runner/: executor.py  result_parser.py  robot_manager.py
wlanpi_rxg_agent/lib/rxg_supplicant/: domain.py  supplicant.py
wlanpi_rxg_agent/lib/rxg_supplicant/tests/: test_supplicant_find_rxg.py  test_supplicant_test_address.py
wlanpi_rxg_agent/lib/sip_control/: baresip.conf  custom_baresipy.py  sip_control.py  sip_control_baresip.py  sip_test.py  sip_test_baresip.py
wlanpi_rxg_agent/lib/sip_control/mdk_baresip/: __init__.py  contacts.py
wlanpi_rxg_agent/lib/tasker/: executor.py  one_shot_task.py  repeating_task.py  store.py  tasker.py
wlanpi_rxg_agent/lib/wifi_control/: domain.py  wifi_control.py  wifi_control_wpa_supplicant.py
wlanpi_rxg_agent/models/: api_models.py  command_result.py  exceptions.py  runcommand_error.py
wlanpi_rxg_agent/tests/: __init__.py  conftest.py  test_config_atomic_and_validation.py  test_robot_result_parser.py  test_robot_smoke.py
wlanpi_rxg_agent/tests/integration/: README.md  __init__.py  test_connectivity_loss_simple.py  test_enhanced_routing.py  test_network_control_hardware.py  test_simple_connectivity_loss.py
