[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []


[project]
requires-python = ">=3.9"
name = "wlanpi-rxg-agent"
authors = [
    {name = "Michael Ketchel", email = "michael.ketchel@gmail.com"},
    {name = "Michael Ketchel", email = "mdk@rgnets.com"},
]
maintainers = [
    {name = "Michael Ketchel", email = "michael.ketchel@gmail.com"},
    {name = "Michael Ketchel", email = "mdk@rgnets.com"},
]
dynamic=["version", "description", "license", "urls", "classifiers"]

#version = "1.0.0-0"
dependencies = [
    "requests",
    "scapy",
    "dpkt",
#    "schedule",
    "aiomqtt",
    "pydantic-settings",
    "python-daemon",
    "toml",
    "paho_mqtt",
    "dbus-python",
    "PyGObject",
    "kismet-rest",
    "wpa_supplicant",
    "jinja2",
    "fastapi",
    "uvicorn",
    "apscheduler"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "types-paho-mqtt",
    "types-requests",
    "types-urllib3",
    "types-toml",
#    "pip-compile",
]
test = [
    "black",
    "flake8",
    "mypy",
    "autoflake",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
